--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 
 </dependency>
 
+<dependency>
+	<groupId>org.postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+	<scope>runtime</scope>
+</dependency>
+
 
  
 
