--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
-spring.jpa.properties.hiberante.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hiberante.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
 
 spring.mail.host=smtp.gmail.com
